@@ -1,0 +1,175 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<gpx
+  version="1.1"
+  creator="GPSBabel - http://www.gpsbabel.org"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns:gpxx="http://www.garmin.com/xmlschemas/GpxExtensions/v3"  xmlns="http://www.topografix.com/GPX/1/1"
+  xsi:schemaLocation="http://www.topografix.com/GPX/1/1 http://www.topografix.com/GPX/1/1/gpx.xsd">
+<metadata>
+<time>2009-04-30T10:09:34Z</time>
+<bounds minlat="-46.055888962" minlon="170.168992840" maxlat="-45.742630167" maxlon="170.724046659"/>
+</metadata>
+<trk>
+  <name>15-NOV-08TWEE #2</name>
+<number>1</number>
+<trkseg>
+<trkpt lat="-45.827688295" lon="170.641103368">
+  <ele>34.744873</ele>
+</trkpt>
+<trkpt lat="-45.827113045" lon="170.639696047">
+  <ele>3.982666</ele>
+</trkpt>
+<trkpt lat="-45.828026924" lon="170.639640978">
+  <ele>2.060059</ele>
+</trkpt>
+<trkpt lat="-45.825658031" lon="170.633406099">
+  <ele>4.463257</ele>
+  <extensions>
+    <gpxx:Depth>7.103397</gpxx:Depth>
+    <gpxx:Temperature>7.544767</gpxx:Temperature>
+  </extensions>
+</trkpt>
+<trkpt lat="-45.823639501" lon="170.631451691">
+  <ele>5.424561</ele>
+  <extensions>
+    <gpxx:Depth>16.557846</gpxx:Depth>
+    <gpxx:Temperature>7.600744</gpxx:Temperature>
+  </extensions>
+</trkpt>
+<trkpt lat="-45.806321818" lon="170.633057579">
+  <ele>3.982666</ele>
+  <extensions>
+    <gpxx:Depth>3.782619</gpxx:Depth>
+    <gpxx:Temperature>7.555964</gpxx:Temperature>
+  </extensions>
+</trkpt>
+<trkpt lat="-45.804222403" lon="170.636323504">
+  <ele>5.905273</ele>
+  <extensions>
+    <gpxx:Depth>5.648117</gpxx:Depth>
+    <gpxx:Temperature>7.567158</gpxx:Temperature>
+  </extensions>
+</trkpt>
+<trkpt lat="-45.793549977" lon="170.668660300">
+  <ele>5.905273</ele>
+  <extensions>
+    <gpxx:Depth>11.732952</gpxx:Depth>
+    <gpxx:Temperature>7.914209</gpxx:Temperature>
+  </extensions>
+</trkpt>
+<trkpt lat="-45.793451490" lon="170.678383391">
+  <ele>3.501953</ele>
+  <extensions>
+    <gpxx:Temperature>7.858232</gpxx:Temperature>
+  </extensions>
+</trkpt>
+<trkpt lat="-45.796431676" lon="170.706956377">
+  <ele>2.540649</ele>
+  <extensions>
+    <gpxx:Temperature>8.003773</gpxx:Temperature>
+  </extensions>
+</trkpt>
+<trkpt lat="-45.795017816" lon="170.713840770">
+  <ele>3.501953</ele>
+  <extensions>
+    <gpxx:Temperature>8.104528</gpxx:Temperature>
+  </extensions>
+</trkpt>
+<trkpt lat="-45.794739202" lon="170.714671332">
+  <ele>2.060059</ele>
+  <extensions>
+    <gpxx:Depth>49.912136</gpxx:Depth>
+    <gpxx:Temperature>8.216480</gpxx:Temperature>
+  </extensions>
+</trkpt>
+<trkpt lat="-45.794188678" lon="170.717136115">
+  <ele>3.021240</ele>
+  <extensions>
+    <gpxx:Depth>27.789894</gpxx:Depth>
+    <gpxx:Temperature>8.406797</gpxx:Temperature>
+  </extensions>
+</trkpt>
+<trkpt lat="-45.792654287" lon="170.714759342">
+  <ele>4.463257</ele>
+  <extensions>
+    <gpxx:Depth>48.417789</gpxx:Depth>
+    <gpxx:Temperature>8.585922</gpxx:Temperature>
+  </extensions>
+</trkpt>
+<trkpt lat="-45.792646073" lon="170.714753894">
+  <ele>3.501953</ele>
+  <extensions>
+    <gpxx:Temperature>8.619507</gpxx:Temperature>
+  </extensions>
+</trkpt>
+<trkpt lat="-45.795568926" lon="170.702492511">
+  <ele>4.463257</ele>
+  <extensions>
+    <gpxx:Temperature>8.619507</gpxx:Temperature>
+  </extensions>
+</trkpt>
+<trkpt lat="-45.791636808" lon="170.670484286">
+  <ele>5.905273</ele>
+</trkpt>
+<trkpt lat="-45.791644687" lon="170.671797562">
+  <ele>3.021240</ele>
+</trkpt>
+<trkpt lat="-45.791588444" lon="170.670437180">
+  <ele>6.385864</ele>
+</trkpt>
+</trkseg>
+</trk>
+<trk>
+  <name>ACTIVE LOG</name>
+<number>3</number>
+<trkseg>
+<trkpt lat="-46.036184700" lon="170.172108812">
+  <ele>9.269897</ele>
+  <time>2009-04-27T02:36:23Z</time>
+</trkpt>
+<trkpt lat="-46.036120662" lon="170.172036309">
+  <ele>14.076416</ele>
+  <time>2009-04-27T02:37:04Z</time>
+</trkpt>
+<trkpt lat="-46.036022929" lon="170.171995824">
+  <ele>13.595825</ele>
+  <time>2009-04-27T02:37:34Z</time>
+</trkpt>
+<trkpt lat="-46.035919162" lon="170.171928182">
+  <ele>10.711792</ele>
+  <time>2009-04-27T02:38:01Z</time>
+</trkpt>
+<trkpt lat="-46.035742639" lon="170.171804298">
+  <ele>9.750610</ele>
+  <time>2009-04-27T02:38:40Z</time>
+  <extensions>
+    <gpxx:Temperature>12.739347</gpxx:Temperature>
+  </extensions>
+</trkpt>
+<trkpt lat="-46.035737442" lon="170.171801448">
+  <ele>9.750610</ele>
+  <time>2009-04-27T02:38:41Z</time>
+  <extensions>
+    <gpxx:Depth>8.128929</gpxx:Depth>
+    <gpxx:Temperature>12.739347</gpxx:Temperature>
+  </extensions>
+</trkpt>
+<trkpt lat="-46.035732664" lon="170.171798347">
+  <ele>9.750610</ele>
+  <time>2009-04-27T02:38:42Z</time>
+  <extensions>
+    <gpxx:Depth>8.119164</gpxx:Depth>
+    <gpxx:Temperature>12.739347</gpxx:Temperature>
+  </extensions>
+</trkpt>
+<trkpt lat="-46.035645744" lon="170.171738164">
+  <ele>8.789185</ele>
+  <time>2009-04-27T02:39:00Z</time>
+  <extensions>
+    <gpxx:Depth>8.724720</gpxx:Depth>
+    <gpxx:Temperature>12.683371</gpxx:Temperature>
+  </extensions>
+</trkpt>
+</trkseg>
+</trk>
+</gpx>
